# crypto_projet

./: CMakeLists.txt  Makefile
app/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/include/: my_lib.hpp
libs/src/: my_lib.cpp
tests/: CMakeLists.txt
